<resources>
    <string name="app_name">NUMAD21FA_Bello_Hiciano_Maranon</string>

    <!-- Main Activity -->
    <string name="send_message">Send Message</string>
    <string name="message_history">Message History</string>
    <string name="logout">Log Out</string>
    <string name="channel_id">Stick_It_To_Em-Received_Channel_ID</string>
    <string name="channel_name">Received Stickers</string>
    <string name="channel_description">Notifies you when a user sends you a sticker</string>

    <!--Sign-In Activity-->
    <string name="username_header">Username</string>
    <string name="username_hint">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="invalid_username">You must enter a username.</string>

    <!-- Send Message Activity -->
    <string name="recipient">Recipient</string>
    <string name="recipient_hint">Recipient\'s username</string>
    <string name="send">Send</string>
    <string name="invalid_recipient">You must enter a valid recipient, who is signed in.</string>
    <string name="craft_a_message">Craft a Message</string>

    <!-- Message Cards -->
    <string name="sender_recipient">%1$s sent %2$s</string>

    <!-- Message History -->
    <string name="sent_messages">Sent Messages</string>
    <string name="sticker_content_description">Sticker Sent</string>
    <string name="messages_received">Messages Received</string>
    <string name="messages_sent">Messages Sent</string>

    <!-- Sticker History -->
    <string name="sticker_history">Sticker History</string>
    <string name="total_stickers">Total Stickers Used: %1$d</string>
    <string name="individual_sticker_count">%1$d</string>

    <!-- Message Service -->
    <string name="notification_body">You\'ve received %1$d stickers</string>

    <!-- Navigation Menu -->
    <string name="home">Home</string>
    <string name="messaging">Messaging</string>
    <string name="craft">Craft</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="user">User</string>
    <string name="a7_title">Stick It To \'Em</string>
    <string name="welcome">Welcome,</string>
    <string name="user_placeholder">%1$s</string>
    <string name="open_nav_menu">Open Navigation Menu</string>
    <string name="closed_nav_menu">Closed Navigation Menu</string>

</resources>