<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home_icon_24dp"
            android:iconTint="@color/navy_blue"
            android:title="@string/home" />

    </group>


    <item android:title="@string/messaging">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/craft"
                    android:icon="@drawable/craft_message_icon_24dp"
                    android:iconTint="@color/navy_blue"
                    android:title="@string/craft" />

                <item
                    android:id="@+id/inbox"
                    android:icon="@drawable/inbox_icon_24dp"
                    android:iconTint="@color/navy_blue"
                    android:title="@string/inbox" />

                <item
                    android:id="@+id/sent"
                    android:icon="@drawable/sent_icon_24dp"
                    android:iconTint="@color/navy_blue"
                    android:title="@string/sent" />

                <item
                    android:id="@+id/history"
                    android:icon="@drawable/history_icon_24dp"
                    android:iconTint="@color/navy_blue"
                    android:title="@string/sticker_history" />

            </group>

        </menu>

    </item>

    <group android:checkableBehavior="single">

        <item android:title="@string/user">

            <menu>

                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/logout_icon_24dp"
                    android:iconTint="@color/navy_blue"
                    android:title="@string/logout" />

            </menu>

        </item>

    </group>
</menu>