<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messaging.SendMessageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/selectedSticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/stickerGrid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/a7_home_icon_foreground" />

        <!-- TODO - update horizontalSpacing, verticalSpacing, columnWidth,-->
        <!-- TODO - listSelector-->
        <GridView
            android:id="@+id/stickerGrid"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_marginBottom="50dp"
            android:columnWidth="100dp"
            android:horizontalSpacing="10dp"
            android:listSelector="@color/purple_200"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            app:layout_constraintBottom_toTopOf="@id/recipientHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectedSticker" />

        <TextView
            android:id="@+id/recipientHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/recipient"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/enterRecipient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/enterRecipient"
            app:layout_constraintTop_toBottomOf="@id/stickerGrid" />

        <EditText
            android:id="@+id/enterRecipient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/recipient_hint"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/sendStickerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipientHeader" />

        <Button
            android:id="@+id/sendStickerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterRecipient" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>